--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shahzaibansari123.github.io/Shezi-ReactTempCount",
+  "homepage": "https://shahzaibansari123.github.io/Shezi-ReactTempCount/",
   "name": "temperaturecount",
   "version": "0.1.0",
   "private": true,
